--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
       <div class="row">
         <div class="col-lg-6 mx-auto">
           <img src="101084_800.jpg" alt="не загрузилась картинка" />
-          <h1>Приветствую. Здарова!</h1>
-          <p>
-            Наканецта я шота саздал тут! Теперь надо шота ещё добавить. Далее
-            делаем содержимое по центру - добавляем в div-container новый класс,
-            прямо рядом с классом container, в тех же кавычках! через пробел
-            пишем text-center. Видим шо всё содержимое стало по центру.
+          <h1 class="fw-light">Здарова!</h1>
+          <p class="lead text-muted">
+            На спязи Павло-праграмист. Спасибо за внимание!
           </p>
-          <button type="button" class="btn btn-success">Просто так</button>
+          <a href="https://www.facebook.com/pugatsevich" target="_blank">
+            <button class="btn btn-primary">мой Facebook</button>
+          </a>
         </div>
       </div>
     </div>
