--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <img src="101084_800.jpg" alt="не загрузилась картинка" />
           <h1 class="fw-light">Здарова!</h1>
           <p class="lead text-muted">
-            На спязи Павло-праграмист. Спасибо за внимание!
+            На связи Павло-праграмист. Спасибо за внимание!
           </p>
           <a href="https://www.facebook.com/pugatsevich" target="_blank">
             <button class="btn btn-primary">мой Facebook</button>
