--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container text-center">
       <div class="row">
         <div class="col-lg-6 mx-auto">
-          <img src="101084_800.jpg" alt="не загрузилась картинка" />
+          <img src="123.jpg" alt="не загрузилась картинка" />
           <h1 class="fw-light">Здарова!</h1>
           <p class="lead text-muted">
             На связи Павло-праграмист. Спасибо за внимание!
