--- a/index.html
+++ b/index.html
@@ -8,18 +8,42 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
+    <style>
+      .rounder-img {
+        width: 60%;
+        border-radius: 50%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+        padding: 0.5em;
+        margin-bottom: 1em;
+      }
+    </style>
   </head>
   <body>
-    <div class="container text-center">
+    <div class="container text-center my-5">
       <div class="row">
         <div class="col-lg-6 mx-auto">
-          <img src="123.jpg" alt="не загрузилась картинка" />
-          <h1 class="fw-light">Здарова!</h1>
+          <img
+            class="rounder-img"
+            src="1.jpg"
+            alt="не загрузилось фото"
+          />
+          <h1 class="fw-light">Пугацевич Павел</h1>
           <p class="lead text-muted">
-            На связи Павло-праграмист. Спасибо за внимание!
+            Рад приветствовать Вас на моей первой страничке!
           </p>
-          <a href="https://www.facebook.com/pugatsevich" target="_blank">
-            <button class="btn btn-primary">мой Facebook</button>
+          <a
+            href="https://www.facebook.com/pugatsevich"
+            target="_blank"
+            class="btn btn-primary"
+          >
+            Facebook
+          </a>
+          <a
+            href="https://www.instagram.com/pugatsevich/"
+            target="_blank"
+            class="btn btn-warning"
+          >
+            instagram
           </a>
         </div>
       </div>
